--- a/electron/package.json
+++ b/electron/package.json
@@ -5,13 +5,14 @@
   "main": "public/electron.js",
   "dependencies": {
     "@slack/client": "^4.4.0",
-    "@types/simple-oauth2": "^2.2.1",
+    "@types/url-parse": "^1.4.1",
     "electron-is-dev": "^0.3.0",
     "react": "16.7.0-alpha.2",
     "react-dom": "16.7.0-alpha.2",
     "react-scripts": "^2.1.1",
     "simple-oauth2": "^2.2.1",
-    "styled-components": "^3.4.2"
+    "styled-components": "^3.4.2",
+    "url-parse": "^1.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,13 +30,24 @@
     ],
     "directories": {
       "buildResources": "assets"
-    }
+    },
+    "protocols": [
+      {
+        "name": "sbelectron",
+        "role": "Viewer",
+        "schemes": [
+          "sbelectron",
+          "sb_electron"
+        ]
+      }
+    ]
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.15",
-    "@types/react": "^16.7.17",
-    "@types/react-dom": "^16.0.11",
+    "@types/react": "16.7.17",
+    "@types/react-dom": "16.0.11",
+    "@types/simple-oauth2": "^2.2.1",
     "concurrently": "^3.6.1",
     "electron": "^2.0.7",
     "electron-builder": "^20.27.1",
