Complete implementing oauth flow, render simple chat layout

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -12,7 +12,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "lib": ["esnext"]
 }
