--- a/electron/package.json
+++ b/electron/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "main": "public/electron.js",
   "dependencies": {
-    "@slack/client": "^4.4.0",
+    "@slack/client": "^4.8.0",
     "@types/url-parse": "^1.4.1",
+    "dotenv": "^6.2.0",
     "electron-is-dev": "^0.3.0",
+    "fetch": "^1.1.0",
     "react": "16.7.0-alpha.2",
     "react-dom": "16.7.0-alpha.2",
     "react-scripts": "^2.1.1",
     "simple-oauth2": "^2.2.1",
+    "slack": "^11.0.1",
     "styled-components": "^3.4.2",
-    "url-parse": "^1.4.4"
+    "url-parse": "^1.4.4",
+    "use-async-effect": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +49,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.15",
-    "@types/react": "16.7.17",
+    "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
     "@types/simple-oauth2": "^2.2.1",
     "concurrently": "^3.6.1",
