--- a/electron/package.json
+++ b/electron/package.json
@@ -5,10 +5,10 @@
   "main": "public/electron.js",
   "dependencies": {
     "@slack/client": "^4.8.0",
-    "@types/url-parse": "^1.4.1",
     "dotenv": "^6.2.0",
     "electron-is-dev": "^0.3.0",
     "fetch": "^1.1.0",
+    "moment": "^2.23.0",
     "react": "16.7.0-alpha.2",
     "react-dom": "16.7.0-alpha.2",
     "react-scripts": "^2.1.1",
@@ -52,6 +52,8 @@
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
     "@types/simple-oauth2": "^2.2.1",
+    "@types/react-window": "^1.1.0",
+    "@types/url-parse": "^1.4.1",
     "concurrently": "^3.6.1",
     "electron": "^2.0.7",
     "electron-builder": "^20.27.1",
