--- a/electron/package.json
+++ b/electron/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.23.0",
     "react": "16.7.0-alpha.2",
     "react-dom": "16.7.0-alpha.2",
+    "react-markdown": "^4.0.6",
     "react-scripts": "^2.1.1",
     "simple-oauth2": "^2.2.1",
     "slack": "^11.0.1",
@@ -51,8 +52,8 @@
     "@types/node": "^10.12.15",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
-    "@types/simple-oauth2": "^2.2.1",
     "@types/react-window": "^1.1.0",
+    "@types/simple-oauth2": "^2.2.1",
     "@types/url-parse": "^1.4.1",
     "concurrently": "^3.6.1",
     "electron": "^2.0.7",
