--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,9 +7,9 @@ permalink: pretty
 
 # Setup
 title: Silver Bullet
-tagline: "Desktop UI"
+tagline: "Exploring desktop UI frameworks"
 description: "Implementing a chat app in different Desktop GUI frameworks"
-url: http://hyde.getpoole.com
+url: https://desktopui.github.io
 baseurl: /
 
 author:
