--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,7 +10,7 @@ title: Silver Bullet
 tagline: "Exploring desktop UI frameworks"
 description: "Implementing a chat app in different Desktop GUI frameworks"
 url: https://desktopui.github.io/silver-bullet
-baseurl: /silver-bullet
+baseurl: /silver-bullet/
 
 author:
   name: "Dmitry Loktev"
