[docs] update baseurl

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@ title: Silver Bullet
 tagline: "Exploring desktop UI frameworks"
 description: "Implementing a chat app in different GUI frameworks"
 url: https://desktopui.github.io/silver-bullet
-baseurl: /silver-bullet/
+baseurl: /silver-bullet
 
 author:
   name: "Dmitry Loktev"
